# pyDelPhi

./: .gitattributes  .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  PKG-INFO  README.md  pyproject.toml
pydelphi/: __init__.py
pydelphi/app/: delphi.py
pydelphi/config/: global_runtime.py  logging_config.py
pydelphi/constants/: __init__.py  application.py  elements.py  physical.py  residues.py
pydelphi/data/: references.bib
pydelphi/data/test_examples/1he8/: 1he8.pqr  param_1he8_py.prm
pydelphi/data/test_examples/5tif/: 5tif.pqr  param_5tif_py.prm
pydelphi/data/test_examples/arg/: amber99sb_sig-eps-gamma.vdw  arg.pqr  arg_surface-3A.zeta  param_arg_py.prm
pydelphi/data/test_examples/barnase/: param_barnase1_py.prm  param_focus2_py.prm
pydelphi/data/test_examples/frc_analytical/: field-charges.crg  field-charges.siz  my_py.frc  param.prm  param_py.prm  probe.frc  probe_py.frc
pydelphi/data/test_examples/frc_barstar/: barstar.pqr  frc_probe-atoms.pqr  param_barstar.prm
pydelphi/data/test_examples/nonlinear/: amber_times_5.crg  param_linear_py.prm  param_nl_cpp.prm  param_nl_py.prm  param_nonlinear.prm
pydelphi/energy/: calculator.py  coulombic.py  coulombic_nl.py  energy_models.py  gridenergy.py  lj.py  nonlinear.py  nonpolar.py  reactionfield_induced_surf_v2.py
pydelphi/foundation/: bib_manager.py  context.py  enumbase.py  enums.py  platforms.py  platforms_back.py
pydelphi/scripts/: pydelphi_help.py  pydelphi_static.py
pydelphi/solver/: core.py  solver.py
pydelphi/solver/pb/: common_pb.py
pydelphi/solver/rpb/: common_rpb.py
pydelphi/space/: _epsindex_trad.py  gcs_surface.py  space.py  surface.py  vdwms.py
pydelphi/space/core/: adjacency_builder.py  gaussian.py  gaussian_naive.py  grid_charger.py  vdw_eps_initizer.py  voxelizer.py
pydelphi/tests/: test_coulomic_platforms.py  test_pydelphi_energy_regression.back.py  test_pydelphi_energy_regression.py
pydelphi/utils/: energy_terms.py  interpolation.py  nonlinear.py  utils.py
pydelphi/utils/cuda/: double.py  single.py
pydelphi/utils/io/: inproc.py  readers.py  writers.py
pydelphi/utils/prec/: any.py  double.py  single.py
(+41 files in other folders)
