[tool.poetry]
name = "pydelphi"
version = "0.1.0"
description = "pyDelPhi — a Python/Numba/CUDA implementation of the DelPhi Poisson–Boltzmann solver for biomolecular electrostatics and solvation energy calculations."
authors = [
  "Shailesh Kumar Panday <shaileshp51@gmail.com>"
]
maintainers = [
  "pyDelPhi Development Team <https://github.com/shaileshp51/pyDelPhi/issues>"
]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "pydelphi" }]

# Project URLs
repository = "https://github.com/shaileshp51/pyDelPhi"
homepage = "https://github.com/shaileshp51/pyDelPhi"
documentation = "https://github.com/shaileshp51/pyDelPhi/wiki"

# Search metadata
keywords = [
    "Poisson-Boltzmann",
    "Electrostatics",
    "Electrostatic potential",
    "Polar solvation free energy",
    "Biophysics",
    "Continuum Solvent",
    "DelPhi",
    "CUDA",
    "Numba"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.0"
numba = "^0.61.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
flake8 = "^6.0.0"

# CLI entry points
[tool.poetry.scripts]
bump-version = "scripts.bump_version:main"
pydelphi-static = "pydelphi.scripts.pydelphi_static:main"
pydelphi-help = "pydelphi.scripts.pydelphi_help:main"
pydelphi-test = "pydelphi.tests.test_pydelphi_energy_regression:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
